# fall-detection-lmu

./: .gitignore  README.md  pyproject.toml
fall-detection/: pyproject.toml
fall_detection/: __init__.py
notebooks/: 01-data-exploration.ipynb  02_DataExplorationBothDataSets.ipynb  StreamlinedExploringofFallNet.ipynb
project_brief/: fall_detection_project_brief.md
scripts/: download_datasets.py  lmu_fall_detection_play.py
